--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  english_words: ^3.1.0
+  http: ^0.11.3+13
+  json_annotation: ^0.2.0
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
+  build_runner: ^0.8.9
+  json_serializable: ^0.4.0
+
+
+
+
 
 
 # For information on the generic Dart part of this file, see the
