--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.11.3+13
   json_annotation: ^0.2.0
+  shared_preferences: "^0.4.2"
+  sqflite: "^0.11.0+1"
+  dio: ^0.1.3
+
 
 dev_dependencies:
 
