--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,19 +8,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  http: ^0.11.3+13
-  json_annotation: ^0.2.0
-  shared_preferences: "^0.4.2"
-  sqflite: "^0.11.0+1"
-  dio: ^0.1.3
+  http: ^0.12.0+1
+  json_annotation: ^2.0.0
+  shared_preferences: ^0.4.3
+  sqflite: ^1.0.0
+  dio: ^0.1.8
 
 
 dev_dependencies:
 
   flutter_test:
     sdk: flutter
-  build_runner: ^0.8.9
-  json_serializable: ^0.4.0
+  build_runner: ^1.1.3
+  json_serializable: ^2.0.1
 
 
 
