--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   shared_preferences: ^0.4.3
   sqflite: ^1.0.0
   dio: ^0.1.8
+  flutter_easyrefresh: ^1.1.3
+  video_player: ^0.8.0
+  pulltorefresh_flutter: ^0.1.9
+
 
 
 dev_dependencies:
